fix: change gap parameters at hetp area on mine page

--- a/style.css
+++ b/style.css
@@ -452,7 +452,8 @@ a {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    gap: 11.6959%;
+    column-gap: 11.6959%;
+    row-gap: 52px;
     justify-content: center;
     align-content: space-between;
 }
@@ -463,7 +464,6 @@ a {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-bottom: 52px;
 }
 
 .help-list-item-text {
